WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72428
REGRESSION (
r98887
): ParserArena and Keywords leaking
https://bugs.webkit.org/show_bug.cgi?id=72428
Summary
REGRESSION (r98887): ParserArena and Keywords leaking
Darin Adler
Reported
2011-11-15 15:15:33 PST
Leaks bot shows the ParserArena and Keywords objects leaking.
Attachments
Patch
(3.77 KB, patch)
2011-11-15 15:40 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2011-11-15 15:40:03 PST
Created
attachment 115264
[details]
Patch
WebKit Review Bot
Comment 2
2011-11-15 18:53:25 PST
Comment on
attachment 115264
[details]
Patch Clearing flags on attachment: 115264 Committed
r100391
: <
http://trac.webkit.org/changeset/100391
>
WebKit Review Bot
Comment 3
2011-11-15 18:53:30 PST
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 4
2011-11-16 15:31:12 PST
<
rdar://problem/10458577
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug