REGRESSION (r98887): ParserArena and Keywords leaking https://bugs.webkit.org/show_bug.cgi?id=72428

Reviewed by Sam Weinig.

* parser/Lexer.h: Made Keywords destructor public since OwnPtr and PassOwnPtr
need to be able to destroy it.

* parser/Parser.cpp:
(JSC::Parser::Parser): Use get now that parserArena is an OwnPtr.

* runtime/JSGlobalData.cpp:
(JSC::JSGlobalData::JSGlobalData): Use adoptPtr to initialize OwnPtr members.

* runtime/JSGlobalData.h: Make parserArena and keywords be OwnPtr.


Canonical link: https://commits.webkit.org/88922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100391 268f45cc-cd09-0410-ab3c-d52691b4dbfc